--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ backports.zoneinfo==0.2.1
 Django==4.1.2
 django-appconf==1.0.5
 django-environ==0.9.0
+django-sslserver==0.22
+Pillow==9.2.0
 rcssmin==1.1.0
 rjsmin==1.2.0
 six==1.16.0
